<resources>
    <string name="app_name">Swimmer_seller</string>
    <string name="copyright_and_version">&#169; 2023 멋사. 개발 팀: 3팀 | v1.0.0</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_confirm">비밀번호 확인</string>
    <string name="action_login">로그인</string>
    <string name="action_logout">로그아웃</string>
    <string name="action_signup">회원가입</string>
    <string name="action_signup_info">사업자 정보 입력</string>
    <string name="action_reset_password">비밀번호 재설정</string>
    <string name="action_find_email">이메일 찾기</string>
    <string name="welcome">환영합니다!</string>
    <string name="invalid_email">유효한 이메일 주소를 입력해주세요.</string>
    <string name="invalid_password">비밀번호는 최소 6자 이상이어야 합니다.</string>
    <string name="invalid_name">담당자명을 입력해주세요</string>
    <string name="invalid_phone_number">담당자 연락처를 입력해주세요</string>
    <string name="invalid_confirm">비밀번호가 일치하지 않습니다. 다시 입력해주세요.</string>
    <string name="login_succeed">로그인에 성공했습니다.</string>
    <string name="login_failed">로그인에 실패했습니다.</string>
    <string name="signup_succeed">회원가입에 성공했습니다.</string>
    <string name="signup_failed">회원가입에 실패했습니다.</string>
    <string name="signup_info_succeed">회원정보저장에 성공했습니다.</string>
    <string name="signup_info_failed">회원정보저장에 실패했습니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_signup">회원가입</string>
    <string name="prompt_find_email">이메일 찾기</string>
    <string name="prompt_find_password">비밀번호 찾기</string>
    <string name="action_next">다음</string>
    <string name="prompt_company_reg_num">사업자 등록 번호</string>
    <string name="prompt_company_owner_name">대표자명</string>
    <string name="prompt_company_name">브랜드명</string>
    <string name="prompt_company_description">브랜드 설명</string>
    <string name="prompt_company_address">사업장 주소</string>
    <string name="prompt_manual_input">직접 입력</string>
    <string name="at_sign">\@</string>
    <string name="prompt_manager_email">담당자 이메일</string>
    <string name="prompt_verify">인증</string>
    <string name="prompt_manager_contact">담당자 연락처</string>
    <string name="prompt_manager_name">담당자명</string>
    <string name="prompt_company_account">계좌 번호</string>
    <string name="kukminbank">국민은행</string>
    <string name="shinhanbank">신한은행</string>
    <string name="wooribank">우리은행</string>
    <string name="kakaobank">카카오뱅크</string>
    <string name="ibkbank">기업은행</string>
    <string name="hanabank">하나은행</string>
    <string name="kdbbank">산업은행</string>
    <string name="gmail">gmail.com</string>
    <string name="naver">naver.com</string>
    <string name="daum">daum.net</string>
    <string name="nate">nate.com</string>
    <string name="prompt_company_contact">사업장 연락처</string>
    <string name="guide_email_for_password_reset">비밀번호 재설정을 위한 이메일 주소</string>
    <string name="action_send_email">이메일 보내기</string>
    <string name="send_email_succeed">"비밀번호 재설정 이메일이 전송되었습니다."</string>
    <string name="send_email_failed">"오류가 발생했습니다. 다시 시도해주세요."</string>
    <string name="user_cannot_found">"가입되어있지 않은 이메일입니다."</string>
    <string name="contact_phone_cannot_found">"가입되어있지 않은 연락처입니다."</string>
    <string name="product_manage_subheader_title">상품 관리</string>
    <string name="add_product_title">상품 등록</string>
    <string name="view_modify_product_title">상품 조회/수정</string>
    <string name="manage_order_ship_title">주문/배송 관리</string>
    <string name="cs_subheader_title">CS</string>
    <string name="manage_notice_title">공지 관리</string>
    <string name="manage_inquiry_title">문의 관리</string>
    <string name="setting_title">설정</string>
    <string name="menu_title">메뉴</string>
    <string name="mypage_title">마이페이지</string>
    <string name="label_edit_password">비밀번호 수정</string>
    <string name="label_payment_completed">결제완료</string>
    <string name="no_order">이런! 주문이 없네요</string>
    <string name="prompt_delete">삭제</string>
    <string name="order_detail_title">주문 상세 정보</string>
    <string name="label_basic_order_info">주문기본정보</string>
    <string name="label_order_uid">주문번호</string>
    <string name="label_order_datetime">주문일시</string>
    <string name="label_order_customer_uid">고객ID</string>
    <string name="label_order_customer_contact">고객 연락처</string>
    <string name="label_order_item_info">상품정보</string>
    <string name="label_order_item_count">수량</string>
    <string name="label_order_item_total_price">총 금액</string>
    <string name="label_order_shipping_info">배송정보</string>
    <string name="label_order_receiver">수령인</string>
    <string name="label_order_receiver_contact">수령인 연락처</string>
    <string name="label_order_shipping_address">배송지</string>
    <string name="label_order_shipping_message">배송메세지</string>
    <string name="label_shipping_await">배송준비</string>
    <string name="label_shipping_continue">배송중</string>
    <string name="label_shipping_completed">배송완료</string>
    <string name="checkbox_info_usage">개인정보 수집이용에 동의합니다.</string>
    <string name="invalid_bus_reg_num">사업자 등록번호를 입력해주세요</string>
    <string name="invalid_represent_name">대표자명을 입력해주세요</string>
    <string name="invalid_brand_name">브랜드명을 입력해주세요</string>
    <string name="invalid_description">브랜드 설명을 입력해주세요</string>
    <string name="invalid_address">사업장 주소를 입력해주세요</string>
    <string name="invalid_brand_phone_num">사업장 연락처를 입력해주세요</string>
    <string name="invalid_bank_name">거래은행을 입력해주세요</string>
    <string name="invalid_account_num">계좌번호를 입력해주세요</string>
    <string name="invalid_contact_name">담당자명을 입력해주세요</string>
    <string name="invalid_contact_phone_num">담당자 연락처를 입력해주세요</string>
    <string name="invalid_contact_email">담당자 이메일을 입력해주세요</string>
    <string name="invalid_consent_agree">개인정보 수집이용에 동의해주세요</string>
    <string name="home_product_add_button">상품 등록하기</string>
    <string name="home_product_count">등록된 상품이 0건 있습니다.</string>
    <string name="home_product_text">판매 상품을 등록해주세요.</string>
    <string name="home_order_title">주문/배송</string>
    <string name="label_order_cancel">주문 취소</string>
    <string name="label_order_exchange">교환 신청</string>
    <string name="label_order_refund">환불 신청</string>
    <string name="_5">5</string>
    <string name="default_order_count">5건</string>
    <string name="seller_guide_title">판매자 가이드</string>
    <string name="seller_guide_subject">상품 등록 가이드</string>
    <string name="seller_guide_content">SWIMMER 앱에서 당신의 상품을 판매해보세요!</string>
    <string name="guide_add_product">SWIMMER 쇼핑몰에서 판매할 상품을 등록할 수 있습니다. 아래와 같이 항목에 해당하는 상품 정보를 기입 해주세요.</string>
    <string name="guide_add_option">상품에 대해 색상, 사이즈 옵션을 추가할 수 있습니다.</string>
    <string name="guide_product_list">등록한 상품 목록을 확인할 수 있습니다.</string>
    <string name="guide_product_detail">상품의 상세 정보와 판매자 앱에서 보일 화면의 미리보기를 확인할 수 있습니다.</string>
    <string-array name="categoryMain">
        <item>여성</item>
        <item>남성</item>
        <item>아동</item>
        <item>용품</item>
    </string-array>
    <string-array name="categoryMid1">
        <item>수영복</item>
        <item>비키니</item>
        <item>래쉬가드</item>
        <item>비치웨어</item>
    </string-array>
    <string-array name="categoryMid2">
        <item>수영복</item>
        <item>래쉬가드</item>
        <item>비치웨어</item>
    </string-array>
    <string-array name="categoryMid3">
        <item>수영복</item>
        <item>래쉬가드</item>
    </string-array>
    <string-array name="categoryMid4">
        <item>수경</item>
        <item>수모</item>
        <item>오리발</item>
        <item>가방</item>
        <item>물놀이용품</item>
    </string-array>
    <string-array name="categorySub1_1">
        <item>원피스</item>
        <item>반전신</item>
        <item>탄탄이</item>
        <item>아쿠아</item>
    </string-array>
    <string-array name="categorySub1_2">
        <item>모노키니</item>
        <item>비키니</item>
        <item>치마비키니</item>
    </string-array>
    <string-array name="categorySub1_3">
        <item>슈트</item>
        <item>상의</item>
        <item>팬츠</item>
        <item>레깅스</item>
    </string-array>
    <string-array name="categorySub1_4">
        <item>원피스</item>
        <item>상의</item>
        <item>하의</item>
    </string-array>
    <string-array name="categorySub2_1">
        <item>5부</item>
        <item>사각</item>
        <item>탄탄이</item>
    </string-array>
    <string-array name="categorySub2_2">
        <item>상의</item>
        <item>팬츠</item>
        <item>레깅스</item>
    </string-array>
    <string-array name="categorySub2_3">
        <item>슈트</item>
        <item>레깅스</item>
        <item>상의</item>
        <item>팬츠</item>
    </string-array>
    <string-array name="categorySub3_1">
        <item>걸즈</item>
        <item>보이</item>
    </string-array>
    <string-array name="categorySub3_2">
        <item>슈트</item>
        <item>상의</item>
        <item>팬츠</item>
        <item>유아용</item>
    </string-array>
    <string-array name="categorySub4_1">
        <item>레이싱</item>
        <item>트레이닝</item>
        <item>오픈워터</item>
    </string-array>
    <string-array name="categorySub4_2">
        <item>실리콘</item>
        <item>코팅</item>
        <item>스판/메쉬</item>
    </string-array>
    <string-array name="categorySub4_3">
        <item>숏핀오리발</item>
        <item>롱핀오리발</item>
        <item>스노클링핀</item>
        <item>오픈워터핀</item>
    </string-array>
    <string-array name="categorySub4_4">
        <item>메쉬백</item>
        <item>숄더백</item>
        <item>드라이백</item>
        <item>웨이스트백</item>
        <item>백팩</item>
    </string-array>
    <string-array name="categorySub4_5">
        <item>아쿠아슈즈</item>
        <item>스노클링</item>
        <item>부력조끼</item>
        <item>부력판</item>
        <item>튜브/암밴드</item>
    </string-array>
    <string-array name="productFilter">
        <item>전체</item>
        <item>여성</item>
        <item>남성</item>
        <item>아동</item>
        <item>용품</item>
    </string-array>
    <string-array name="productSort">
        <item>최신순</item>
        <item>등록순</item>
        <item>이름순</item>
        <item>가격 낮은순</item>
        <item>가격 높은순</item>
    </string-array>
    <string name="home_product_add_title">상품 등록</string>
    <string name="main_image_title">상품 이미지 (최대 5개)</string>
    <string name="main_image_count">0/5</string>
    <string name="prompt_product_name">상품명</string>
    <string name="action_add">추가</string>
    <string name="title_select_color">색상 선택</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="title_select_size">사이즈 선택</string>
    <string name="size_xs">XS</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
    <string name="size_xl">XL</string>
    <string name="size_xxl">XXL</string>
    <string name="size_free">FREE</string>
    <string name="label_weight">체중</string>
    <string name="weight_44kg">44kg 이하</string>
    <string name="weight_45_49_kg">45 ~ 49 kg</string>
    <string name="weight_50_54_kg">50 ~ 54 kg</string>
    <string name="weight_55_59_kg">55 ~ 59 kg</string>
    <string name="weight_60_64_kg">60 ~ 64 kg</string>
    <string name="weight_65_69_kg">65 ~ 69 kg</string>
    <string name="weight_70_74_kg">70 ~ 74 kg</string>
    <string name="weight_75_79_kg">75 ~ 79 kg</string>
    <string name="weight_80_84_kg">80 ~ 84 kg</string>
    <string name="weight_85_89_kg">85 ~ 89 kg</string>
    <string name="weight_90_94_kg">90 ~ 94 kg</string>
    <string name="weight_95_99_kg">95 ~ 99 kg</string>
    <string name="weight_100_104_kg">100 ~ 104 kg</string>
    <string name="weight_105_109_kg">105 ~ 109 kg</string>
    <string name="weight_115_kg">115 kg 이상</string>
</resources>