<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewColorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/title_select_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="0dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_0"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="@android:color/holo_red_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_1"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#FF5722" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_2"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="@android:color/holo_orange_light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_3"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#199A2A" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_4"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#2BE0FF" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_5"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#0075D3" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_6"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#3F51B5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_7"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#673AB7" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_8"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#EF79D2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_9"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#9F4D06" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_10"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#E4B18E" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_11"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#FFFFFF" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_12"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#737373" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/_13"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="#000000" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewSizeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_select_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:chipSpacingVertical="0dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/size_xs"
                android:contentDescription="@string/_0"
                app:checkedIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/size_s"
                android:contentDescription="@string/_1"
                app:checkedIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/size_m"
                android:contentDescription="@string/_2"
                app:checkedIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/size_l"
                android:contentDescription="@string/_3"
                app:checkedIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/size_xl"
                android:contentDescription="@string/_4"
                app:checkedIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/size_xxl"
                android:contentDescription="@string/_5"
                app:checkedIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/size_free"
                android:contentDescription="@string/_6"
                app:checkedIconEnabled="true" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddOption"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:text="@string/action_add"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>