<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_weight"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupReviewWeight"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:columnCount="3"
            app:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip44kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_44kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip45kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_45_49_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip50kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_50_54_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip55kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_55_59_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip60kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_60_64_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip65kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_65_69_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip70kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_70_74_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip75kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_75_79_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip80kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_80_84_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip85kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_85_89_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip90kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_90_94_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip95kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_95_99_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip100kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_100_104_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip105kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_105_109_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip115kg"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weight_115_kg"
                android:textAlignment="center"
                app:layout_columnWeight="1" />
        </androidx.gridlayout.widget.GridLayout>

    </com.google.android.material.chip.ChipGroup>


</LinearLayout>